Design01.cydsn/BUILD.log
--------------- Build Started: 07/05/2023 02:00:01 Project: Design01, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
cydsfit.exe -.appdatapath "C:\Users\Windows 11\AppData\Local\Cypress Semiconductor\PSoC Creator\4.4" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -.fdsreffile=referenced_files.txt -p "C:\Users\Windows 11\Documents\PSoC Creator\PROYECTO_FINAL_V0\Design01.cydsn\Design01.cyprj" -d CY8C5888LTI-LP097 -s "C:\Users\Windows 11\Documents\PSoC Creator\PROYECTO_FINAL_V0\Design01.cydsn\Generated_Source\PSoC5" -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
ADD: fit.M0032: warning: Clock Warning: (timer_clock's accuracy range '10  Hz -50% +100%, (5  Hz - 20  Hz)' is not within the specified tolerance range '10  Hz +/- 5%, (9.5  Hz - 10.5  Hz)'.).
 * C:\Users\Windows 11\Documents\PSoC Creator\PROYECTO_FINAL_V0\Design01.cydsn\Design01.cydwr (timer_clock)
 * C:\Users\Windows 11\Documents\PSoC Creator\PROYECTO_FINAL_V0\Design01.cydsn\TopDesign\TopDesign.cysch (Instance:timer_clock)
ADD: fit.M0032: warning: Clock Warning: (timer_clock_1's accuracy range '10  Hz -50% +100%, (5  Hz - 20  Hz)' is not within the specified tolerance range '10  Hz +/- 5%, (9.5  Hz - 10.5  Hz)'.).
 * C:\Users\Windows 11\Documents\PSoC Creator\PROYECTO_FINAL_V0\Design01.cydsn\Design01.cydwr (timer_clock_1)
 * C:\Users\Windows 11\Documents\PSoC Creator\PROYECTO_FINAL_V0\Design01.cydsn\TopDesign\TopDesign.cysch (Instance:timer_clock_1)
HDL Generation...
Synthesis...
Tech Mapping...
ADD: pft.M0040: information: The following 5 pin(s) will be assigned a location by the fitter: Rx_1(0), SIN_1(0), SIN_2(0), SIN_3(0), Tx_1(0)
Analog Placement...
Log: apr.M0058: The analog placement iterative improvement is 46% done. (App=cydsfit)
Log: apr.M0058: The analog placement iterative improvement is 74% done. (App=cydsfit)
Analog Routing...
Analog Code Generation...
Digital Placement...
Digital Routing...
Bitstream Generation...
Bitstream Verification...
Static timing analysis...
API Generation...
Dependency Generation...
Cleanup...
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM3\ARM_GCC_541\Debug\main.o
main.c: In function 'Adjust_Individual_Sample_Rate':
main.c:101:9: warning: implicit declaration of function 'abs' [-Wimplicit-function-declaration]
     D = abs(vector_datos[0]
         ^
main.c:102:5: error: expected ')' before 'return'
     return SR_New;
     ^
main.c:104:1: error: expected ';' before '}' token
 }
 ^
main.c:100:11: warning: unused variable 'SR_New' [-Wunused-variable]
     uint8 SR_New = 0;
           ^
main.c:104:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 07/05/2023 02:00:11 ---------------
